apps/storage/minio/overlays/storage/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
    metallb.universe.tf/loadBalancerIPs: 192.168.40.187
  labels:
    app.kubernetes.io/name: minio
  name: minio
spec:
  type: LoadBalancer
  ports:
  - name: minio
    port: 9000
    protocol: TCP
    targetPort: 9000
  # selector:
  #   app.kubernetes.io/name: minio
