apps/storage/minio/overlays/storage/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:eboeC+KxXQ1iB8b+yPk6OPfustoPHjcxFnM=,iv:DNoc9x4WAT17TLBbhSUmQI+luzPAXCCK/Igxo7P0+sQ=,tag:JTzZcmZFS/Wkq6KxL0pw6w==,type:str]
        kubernetes.io/ingress.class: traefik-external
        ingress.kubernetes.io/ssl-passthrough: "true"
    name: s3
    namespace: minio
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:dQq1q+j+AOMlW1k1OBq6DeELhoDZ96w4k8CtzlhwHPBr9QY/4g==,iv:DJ9yzLfym4WGq/NnbxaG+RTcTlYdrpJzNrtumdWb35U=,tag:q2q5PIr2IMU3F8BDqz8hYw==,type:str]
          services:
            - kind: Service
              name: minio
              port: 9000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:ONGzlSRSCl8FRZfiy/oFcWy6gA2Y9xe581M=,iv:7e/cnKGb+j4fjrEoVnj9e/IvXPQJq0pOmU5YAzqG2VY=,tag:2Rsuc9y4r0vioS5nmxYe2Q==,type:str]
              sans:
                - ENC[AES256_GCM,data:BRxLK41riwVS5yYHMiTaNYj+3wXYCYvBItDK,iv:TSuDvdQlV6yg7gzWFXJF5xvleHlyVjexHDPyg9MyX2U=,tag:M4FfHgnulbpwQRy3pnWj9w==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: s3-cf-production
# ---
# apiVersion: traefik.io/v1alpha1
# kind: TraefikService
# metadata:
#     annotations:
#         argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
#         argocd.argoproj.io/sync-wave: "10"
#     name: s3
# spec:
#     weighted:
#         services:
#             - name: s3
#               port: 9000
#               weight: 1
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOQjdqYzBQQnJtLytPNTEv
[...]
            y/CHD5RWYCNJjm+i4EJJsos96FEwHxOCK2tbzXShpwMDYoLiH+2QeQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-28T15:56:42Z"
    mac: ENC[AES256_GCM,data:YCfp7yECfnD7uUoTaRA5UxD6QhigWiToSg4phiF9W0OgVCtEv3jvkemrmIzhVuSbFJiSNiP7CTy5YEkj/tzeB4dRvBc95Axow4RTjO3DdrTUygmi76tvLyggBLyb7XVKZmJ1xXmQ1NgjiupulaeWpBEcbgiUO8zzbXyRaP3q7Hc=,iv:OzRV30ZIgYJ8PjNTZpZod4QzDY7BiFf7fc2uHhYVrIU=,tag:/Ul7LcMqvMkBCDP75Opt/Q==,type:str]
    pgp:
        - created_at: "2024-06-28T13:28:15Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAoQBkgqRIG/z6KvM8fL5cFnRHZiq0qAokSkTuWZsOQygo
[...]
            =g+Ev
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:eboeC+KxXQ1iB8b+yPk6OPfustoPHjcxFnM=,iv:DNoc9x4WAT17TLBbhSUmQI+luzPAXCCK/Igxo7P0+sQ=,tag:JTzZcmZFS/Wkq6KxL0pw6w==,type:str]
        kubernetes.io/ingress.class: traefik-external
        ingress.kubernetes.io/ssl-passthrough: "true"
    name: minio-console-production
    namespace: minio
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:x1grTnmEA7yaEwSxHz8LuIl9hFugN4VD1xWJsaXzPlkKnKADi2nzXZjz7EIql1ahDU3fB02kDdSS0jkK1w==,iv:9g9Suh4B3Mrx6xlL7LdRC4FGVC2nFxi6pJB++SuHZk4=,tag:fPPP4EltogK2x966G6KqUQ==,type:str]
          middlewares:
            - name: rate-limit
              namespace: traefik
          services:
            - kind: TraefikService
              name: minio-console
              port: 9001
    tls:
        domains:
            - main: ENC[AES256_GCM,data:ONGzlSRSCl8FRZfiy/oFcWy6gA2Y9xe581M=,iv:7e/cnKGb+j4fjrEoVnj9e/IvXPQJq0pOmU5YAzqG2VY=,tag:2Rsuc9y4r0vioS5nmxYe2Q==,type:str]
              sans:
                - ENC[AES256_GCM,data:BRxLK41riwVS5yYHMiTaNYj+3wXYCYvBItDK,iv:TSuDvdQlV6yg7gzWFXJF5xvleHlyVjexHDPyg9MyX2U=,tag:M4FfHgnulbpwQRy3pnWj9w==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: minio-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOQjdqYzBQQnJtLytPNTEv
[...]
            y/CHD5RWYCNJjm+i4EJJsos96FEwHxOCK2tbzXShpwMDYoLiH+2QeQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-28T15:56:42Z"
    mac: ENC[AES256_GCM,data:YCfp7yECfnD7uUoTaRA5UxD6QhigWiToSg4phiF9W0OgVCtEv3jvkemrmIzhVuSbFJiSNiP7CTy5YEkj/tzeB4dRvBc95Axow4RTjO3DdrTUygmi76tvLyggBLyb7XVKZmJ1xXmQ1NgjiupulaeWpBEcbgiUO8zzbXyRaP3q7Hc=,iv:OzRV30ZIgYJ8PjNTZpZod4QzDY7BiFf7fc2uHhYVrIU=,tag:/Ul7LcMqvMkBCDP75Opt/Q==,type:str]
    pgp:
        - created_at: "2024-06-28T13:28:15Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAoQBkgqRIG/z6KvM8fL5cFnRHZiq0qAokSkTuWZsOQygo
[...]
            =g+Ev
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
