apps/storage/minio/overlays/storage/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:C6uQXActMeMQugMhLImjYqkXAg4gO+XrPwQ=,iv:pJUOqQmnxYuOuyQ/zZ/uPBZH6l6p6j4rX5EyZ1kr+6w=,tag:lKp3oEghvBeHAVTR4aK9qA==,type:str]
        kubernetes.io/ingress.class: traefik-external
        ingress.kubernetes.io/ssl-passthrough: "true"
    name: minio-console-staging
    namespace: minio
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:g2a+4gG21xre/QHex2n2PDwqRTFCvmg9lPaXEKWibFTge3DT4JGIfjJJA1OjwgdhVNWwxPsjdIyOWQ==,iv:T8n/XgM7uzfQtKFlv1jbc5kYMY2gk0OPWZoaI5OIo0g=,tag:+YMOWQXq8bM5KpjgqcsYFA==,type:str]
          #   middlewares:
          #     - name: rate-limit
          #       namespace: traefik
          services:
            - kind: TraefikService
              name: minio-console
              port: 9001
        - kind: Rule
          match: ENC[AES256_GCM,data:g2a+4gG21xre/QHex2n2PDwqRTFCvmg9lPaXEKWibFTge3DT4JGIfjJJA1OjwgdhVNWwxPsjdIyOWQ==,iv:T8n/XgM7uzfQtKFlv1jbc5kYMY2gk0OPWZoaI5OIo0g=,tag:+YMOWQXq8bM5KpjgqcsYFA==,type:str]
          priority: 2
          services:
            - kind: TraefikService
              name: minio
              port: 9000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:ik5nWmm0pkaQ82+xU1NHRSLQ8DLsSHu9qvw=,iv:MvldYeNmq8a3FQVwpFTTthja2lqX37pJe0sAN4DrP3g=,tag:GIsfU+z59qmG8/kItunDzg==,type:str]
              sans:
                - ENC[AES256_GCM,data:DY1I6RSzui63Elv6sPd1RXlqlvymBt2OiSSs,iv:6DDm/ES3vyknvnoa1bkPW2W1Z7FljEy6ftfb9kPqJnY=,tag:eLpm0oEGIB1QkakgupJRYw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: minio-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0S1BqT0tKTm82YVJ0THU1
[...]
            91rRd0AAP6RJxZUmF0Oax4oZHOvaeMCNTPijdHto/yAvV5subkO2lg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-28T13:07:09Z"
    mac: ENC[AES256_GCM,data:PbcvABfZL0HuBEZCH2D5+OJdXzgwsSyclfe0wLiTj5Hhrj+/u9aPM88JJP4Y/9FEPCPLXe2C9Ygiq9mFiZ9kF/hG+qGcahBUWNALY544UFyB+FhPzAjgSu6qqWJt4oxlwnnZA8CIAoxyK9R1BxQB0zdlgixR1dXa0ppCVYAuDiI=,iv:EOseTa6wCRIB3pFW0hER3ocefeFd0Yx8TjIFipLA+9o=,tag:OLfmeuWS7cJqFTkxg3VQZA==,type:str]
    pgp:
        - created_at: "2024-06-22T20:23:56Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAwgx1mZcn7xu81b4rejL5XdzTAPJT4crvB9/91uzVYAC5
[...]
            =C1pg
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
